fix shake problem, scrollbar style improvement

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,28 +14,58 @@ html, body {
   height: 100%;
 }
 
-/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
-::-webkit-scrollbar
-{
-  width: 10px;
-  height: 10px;
-  background-color: #F5F5F5;
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
 }
 
-/*定义滚动条轨道 内阴影+圆角*/
-::-webkit-scrollbar-track
-{
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  border-radius: 10px;
-  background-color: #F5F5F5;
+::-webkit-scrollbar-track {
+  border: 2px solid transparent;
+  background-clip: padding-box;
+  border-radius: 6px;
+  background-color: rgba(213, 213, 213, .7);
 }
 
-/*定义滑块 内阴影+圆角*/
-::-webkit-scrollbar-thumb
-{
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #555;
+::-webkit-scrollbar-track:horizontal {
+  border-left-width: 3px;
+  border-right-width: 3px;
+}
+
+::-webkit-scrollbar-track:vertical {
+  border-top-width: 3px;
+  border-bottom-width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 2px solid transparent;
+  background-clip: padding-box;
+  border-radius: 6px;
+  background-color: #666;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  border-left-width: 3px;
+  border-right-width: 3px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  border-top-width: 3px;
+  border-bottom-width: 3px;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #1B1B1B;
+}
+
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
 
 .mat-card {
